[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mahdi_env"
version = "2.0.1"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
description = "`get_env()` returns all ENV vars on a machine, including those inside `$HOME/.export` as a special dict."
readme = "README.md"
